<resources>
    <string name="app_name">InBook</string>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="invalid_username_and_password">The credentials that were entered are not correct</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="invalid_password">"Invalid username"</string>
    <string name="invalid_username">Invalid password</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="cannot_create_account">The request could not be completed at this time. Please try again later.</string>
    <string name="too_many_login_attempt">You have incorrectly logged in too many times and your account is suspended for a few minutes.</string>
    <string name="sure_wants_logout">Are you sure wants to logout?</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    // Login Page
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    //Register page
    <string name="register">Register Your Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_type">Company Type</string>
    <string name="next">Next</string>

    //UserRegisterPage
    <string name="user">Name</string>
    <string name="role">Role</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>