<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/company_type"
          android:textColor="@color/black"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:padding="20dp"
          android:textStyle="bold"
          android:textSize="30dp"/>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textFieldUser"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user"
          app:layout_constraintTop_toBottomOf="@id/tv_title"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_margin="20dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textFieldPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          app:layout_constraintTop_toBottomOf="@id/textFieldUser"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_margin="20dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textFieldEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_margin="20dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textFieldRole"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/role"
          app:layout_constraintTop_toBottomOf="@id/textFieldEmail"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_margin="20dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnFinish"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:text="@string/finish"
          app:layout_constraintTop_toBottomOf="@id/textFieldRole"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>